# unito

./: .coverage  .gitignore  AGENTS.md  AUTHORS.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.txt  Makefile  NOTES.md  TODO.md  WORK.md  build.sh  pyproject.toml
.github/workflows/: build.yaml
docs/: index.html  style.css
scripts/: build.py  verify_han.py
sources/: config.yaml  font_sources.yaml
sources/10base/: exclude.yaml
src/unito/: __init__.py  cli.py  config.py  downloader.py  merger.py  pipeline.py  utils.py
src/unito/data/: Hani.jsonl
src/unito_font.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tasks/: 101.md  102.md
tests/: conftest.py  test_cache.py  test_config.py  test_downloader.py  test_exclude.py  test_merger.py  test_pipeline.py  test_subsetter.py  test_utils.py
